<resources>
    <string name="app_name">FindIt</string>
    <string name="add_item">Add Item</string>
    <string name="your_item">Your Items</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="team">Team</string>
    <string name="submit">Submit</string>
    <string-array name="categories_array">
        <item>Books</item>
        <item>Toys</item>
        <item>Important</item>
        <item>Other</item>
    </string-array>
    // Language spinner setting.
    <string-array name="languages">
        <item>English</item>
        <item>Spanish</item>
        <item>French</item>
        <item>German</item>
        <item>Hindi</item>
        <item>Indonesian</item>
    </string-array>

    <string-array name="books">
        <item>Harry Potter</item>
        <item>Lord of the Rings</item>
        <item>Tom Sawyer</item>
    </string-array>
    <string-array name="toys">
        <item>Soccer ball</item>
        <item>Toy car</item>
        <item>Action figures</item>
    </string-array>
    <string-array name="important">
        <item>Car Keys</item>
        <item>Passport</item>
        <item>Money</item>
        <item>Phone</item>
    </string-array>
    <string-array name="other">
        <item>Water Bottle</item>
        <item>Chips</item>
        <item>Gift</item>
    </string-array>
    <string name="fill_out_form">Fill out form, then press submit</string>
    <string name="name_of_item">Name of Item</string>
    <string name="lastlocated">Last located:</string>
    <string name="search_through_category">Search your items by category:</string>
    <string name="books">Books</string>
    <string name="important">Important</string>
    <string name="toys">Toys</string>
    <string name="other">Other</string>


    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_signup">signup</string>
    <string name="welcomeSettings">Welcome to your settings</string>
    <string name="choose_language">Choose your language</string>
    <string name="select_language">Select language</string>
    <string name="chooseTheme">Choose your theme</string>
    <string name="enable_darkMode">Dark Mode</string>
</resources>